# demeter

./: .gitignore  README.md  ca2tel.py  ca2tel_voronoi_age.py  ca2tel_voronoi_coverage.py  cellular_automaton.py  cellular_automaton_mpi.py  cellular_automaton_run.py  diffusion.py  diffusion_parallel.py  pyproject.toml  tel2ca.py  tel2ca_interpolation.py  telemac.py  telemac_diffusion.py
examples/mangroves/: figures.py  make_figures.py  ref_tel.slf  run.py  run_tiger.py  test.py
examples/mangroves-telemac-v8p2r0/: TIGER_2km_50m.slf  diff.py
examples/mangroves-telemac-v8p2r1/: diff.py  ref_tel.slf  run.py
examples/mangroves/user_t2d/: dragfo.f
examples/saltmarshes/: TIGER_2km_50m.cli  gai_input.cas  make_figures.py  ref_tel.slf  run_tiger.py  t2d_input.cas  test.py
examples/saltmarshes-n2-telemac-v8p2r0/: TIGER_2km_200m.slf  figures.py  ref_tel.slf
examples/saltmarshes-n2-telemac-v8p2r1/: diff.py  gai_input.cas  ref_tel.slf  run.py  test.py
examples/saltmarshes-telemac-v8p2r0/: diff.py  ref_tel.slf  run.py
examples/saltmarshes-telemac-v8p2r1/: figures.py  last_gai.slf  last_t2d.slf  ref_tel.slf  run.py
src/demeter/: __init__.py  ca2tel.py  ca2tel_voronoi_age.py  ca2tel_voronoi_coverage.py  cellular_automaton.py  cellular_automaton_functions.py  tel2ca.py  tel2ca_interpolation.py  telemac.py
tests/: test_ca.py  test_ca2tel.py  test_ca2tel_cov.npy  test_ca2tel_grid.slf  test_ca_age.py  test_ca_import_export.py  test_non_rectangle.py
tests/cellular_automaton/: test_ca.py  test_ca_parallel.py
tests/data/: test_ca2tel_age.npy  test_non_rectangle_grid.slf
(+17 files in other folders)
