[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "demeter"
version = "2.3.0"
description = "A Python package for multiscale biogeomorphic modeling"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "GPL-3.0"}

authors = [
    {name = "Olivier Gourgue", email = "ogourgue@gmail.com"}
]

keywords = ["biogeomorphology", "coastal", "vegetation", "modeling"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "mpi4py",
]

[project.optional-dependencies]
telemac = ["pputils @ git+https://codeberg.org/pprodano/pputils.git"]

[project.urls]
Homepage = "https://github.com/ogourgue/demeter"
Repository = "https://github.com/ogourgue/demeter"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
